--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cloudinary": "^1.41.3",
+    "ethers": "^6.16.0",
     "lucide-react": "^0.263.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
